--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -37,6 +37,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.compose.material3:material3:1.1.2'
+
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
