--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
+    implementation project(path: ':datepicker')
+    implementation project(path: ':wheelview')
+
     implementation 'androidx.activity:activity-ktx:1.7.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.0'
 
