--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -18,9 +18,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
     buildFeatures {
         viewBinding true
+        compose true
     }
     buildTypes {
         release {
@@ -35,12 +39,32 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.5'
+    }
+    packaging {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
     implementation 'androidx.compose.material3:material3:1.1.2'
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation 'androidx.camera:camera-core:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.ui:ui-android:1.5.4'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     implementation project(path: ':datepicker')
@@ -57,10 +81,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // Firebase
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation("com.google.firebase:firebase-firestore-ktx")
+    implementation("com.google.firebase:firebase-storage-ktx")
+    implementation("com.google.firebase:firebase-database-ktx")
 
     // Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
@@ -68,4 +95,21 @@ dependencies {
 
     // Coil images download
     implementation("io.coil-kt:coil:2.5.0")
+
+    // Location
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+
+    // Material
+    implementation 'com.google.android.material:material:1.10.0'
+
+    // Room
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+    //implementation "com.google.dagger:hilt-android:$hilt_version"
+    //kapt "com.google.dagger:hilt-compiler:$hilt_version"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
 }
