--- a/KamleonApp/build.gradle
+++ b/KamleonApp/build.gradle
@@ -4,13 +4,15 @@ buildscript {
         hilt_version = '2.44'
         nav_version = '2.7.5'
         lifecycle_version = '2.4.0-alpha03'
+        kotlin_version = '1.8.20'
+        room_version = "2.6.0"
     }
 }
 
 plugins {
     id 'com.android.application' version '8.1.3' apply false
     id 'com.android.library' version '8.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
     id "com.google.dagger.hilt.android" version "$hilt_version" apply false
     id("com.google.gms.google-services") version "4.3.15" apply false
 }
