--- a/KamleonApp/app/src/main/AndroidManifest.xml
+++ b/KamleonApp/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".activities.InitActivity"
             android:exported="true" >
