--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -93,8 +93,9 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
-    // Coil images download
-    implementation("io.coil-kt:coil:2.5.0")
+    // Images
+    implementation 'io.coil-kt:coil:2.5.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Location
     implementation "com.google.android.gms:play-services-location:21.0.1"
