invitations and styles

--- a/KamleonApp/app/src/main/AndroidManifest.xml
+++ b/KamleonApp/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KamleonApp"
+        android:theme="@style/Theme.KamleonApp.Light"
 
         android:hardwareAccelerated="false"
         android:largeHeap="true"
