--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.ui:ui-android:1.5.4'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.3.1'
+
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
@@ -98,10 +99,11 @@ dependencies {
 
     // Images
     implementation 'io.coil-kt:coil:2.5.0'
+    implementation 'io.coil-kt:coil-gif:2.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Location
-    implementation "com.google.android.gms:play-services-location:21.0.1"
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     // Material
     implementation 'com.google.android.material:material:1.10.0'
@@ -116,4 +118,25 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // Camera
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation("androidx.camera:camera-core:${camerax_version}")
+    implementation("androidx.camera:camera-camera2:${camerax_version}")
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
+    // If you want to additionally use the CameraX VideoCapture library
+    implementation("androidx.camera:camera-video:${camerax_version}")
+    // If you want to additionally use the CameraX View class
+    implementation("androidx.camera:camera-view:${camerax_version}")
+    // If you want to additionally add CameraX ML Kit Vision Integration
+    //implementation("androidx.camera:camera-mlkit-vision:${camerax_version}")
+    // If you want to additionally use the CameraX Extensions library
+    implementation("androidx.camera:camera-extensions:${camerax_version}")
+    implementation 'com.google.mlkit:vision-common:17.3.0'
+
+    //implementation 'com.google.zxing:core:3.5.0'
+    implementation "com.journeyapps:zxing-android-embedded:4.3.0"
+
+    //implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.3.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
 }
