--- a/KamleonApp/build.gradle
+++ b/KamleonApp/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         lifecycle_version = '2.4.0-alpha03'
         kotlin_version = '1.8.20'
         room_version = "2.6.0"
+        camerax_version = "1.2.1"
     }
 
     dependencies {
