fix qr scan and minor appearance bugs

--- a/KamleonApp/app/src/main/AndroidManifest.xml
+++ b/KamleonApp/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.hardware.camera2.full" />
     <!--
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -32,7 +31,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KamleonApp.Light"
 
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:largeHeap="true"
 
         tools:targetApi="31">
