--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -134,8 +134,8 @@ dependencies {
     implementation("androidx.camera:camera-extensions:${camerax_version}")
     implementation 'com.google.mlkit:vision-common:17.3.0'
 
-    //implementation 'com.google.zxing:core:3.5.0'
-    implementation "com.journeyapps:zxing-android-embedded:4.3.0"
+    implementation 'com.google.zxing:core:3.5.0'
+    //implementation "com.journeyapps:zxing-android-embedded:4.3.0"
 
     //implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.3.0'
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
