--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -32,6 +32,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions += "environment"
+    productFlavors {
+        development {
+            dimension "environment"
+            versionNameSuffix "-dev"
+        }
+        prod {
+            dimension "environment"
+        }
+        stagging {
+            dimension "environment"
+            versionNameSuffix "-testing"
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
