--- a/KamleonApp/app/build.gradle
+++ b/KamleonApp/app/build.gradle
@@ -14,8 +14,10 @@ android {
         applicationId "com.dynatech2012.kamleonuserapp"
         minSdk 26
         targetSdk 34
-        versionCode 2001
-        versionName "1.0"
+        versionCode 2002
+        versionName "1.0.1"
+
+        resValue "string", "app_version", "${versionName}"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -38,15 +40,18 @@ android {
             dimension "environment"
             resValue "string", "app_name", "Kamleon-DEV"
             versionNameSuffix "-dev"
+            resValue "string", "app_version", "${defaultConfig.versionName}${versionNameSuffix}"
         }
         prod {
             dimension "environment"
             resValue "string", "app_name", "Kamleon"
+            resValue "string", "app_version", "${defaultConfig.versionName}"
         }
         stagging {
             dimension "environment"
             resValue "string", "app_name", "Kamleon-PRE"
             versionNameSuffix "-pre"
+            resValue "string", "app_version", "${defaultConfig.versionName}${versionNameSuffix}"
         }
     }
     compileOptions {
