--- a/KamleonApp/app/src/main/AndroidManifest.xml
+++ b/KamleonApp/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
     <uses-permission android:name="com.dynatech2012.kamleonuserapp.fileprovider.READ" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".application.MyApplication"
@@ -42,7 +43,7 @@
             android:resource="@color/kamleon_blue" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="@string/noti_channel_id" />
+            android:value="@string/channel_id" />
         <!-- hardwareAccelerated & largeHeap to avoid out of memory -->
         <activity
             android:name=".activities.MainActivity"
